# Kora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
Architecture/: README.md  current-architecture.md  overview.md
Architecture/01-runtime-core/: README.md  core.md  daemon.md  graph.md  orchestration.md  runtime.md
Architecture/02-memory-context/: README.md  context.md  memory.md  tools.md
Architecture/03-agents-autonomous/: README.md  autonomous.md  capabilities.md  routing.md  skills.md  workers.md
Architecture/04-conversation-llm/: README.md  cli.md  emotion.md  llm.md  mcp.md  quality.md
Architecture/05-life-adhd/: README.md  adhd.md  life.md
apps/desktop/: .gitignore  README.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  test-electron-main.js  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/phase9/: setup.md
kora_v2/: __init__.py  __main__.py
kora_v2/adhd/: __init__.py  module.py  profile.py  protocol.py
kora_v2/agents/: __init__.py  harness.py  middleware.py  models.py  quality_gates.py
kora_v2/autonomous/: __init__.py  budget.py  checkpoint.py  decisions.py  graph.py  loop.py  overlap.py  pipeline_factory.py  runtime_context.py  state.py
kora_v2/capabilities/: __init__.py  base.py  policy.py  registry.py
kora_v2/cli/: __init__.py  __main__.py  app.py  first_run.py
kora_v2/context/: budget.py  compaction.py  engine.py  working_memory.py
kora_v2/core/: calendar_models.py  db.py  di.py  errors.py  events.py  exceptions.py  logging.py  migrations.py  models.py  rsd_filter.py  settings.py
kora_v2/daemon/: auth_relay.py  desktop_api.py  launcher.py  lockfile.py  server.py  session.py  work_items.py  worker.py
kora_v2/desktop/: __init__.py  models.py  service.py
kora_v2/emotion/: __init__.py  fast_assessor.py  llm_assessor.py
kora_v2/graph/: __init__.py  capability_bridge.py  dispatch.py  prompts.py  reducers.py  state.py  supervisor.py
kora_v2/life/: context_packs.py  day_plan.py  domain_events.py  future_bridge.py  ledger.py  load.py  models.py  proactivity_policy.py  reminders.py  repair.py  routines.py  stabilization.py  trusted_support.py
kora_v2/llm/: base.py  claude_code.py  minimax.py  types.py
kora_v2/mcp/: __init__.py  manager.py  results.py
kora_v2/memory/: dedup.py  embeddings.py  projection.py  retrieval.py  signal_scanner.py  store.py  worker_prompt.py  write_pipeline.py
kora_v2/quality/: __init__.py  confidence.py  gates.py  tier1.py
kora_v2/runtime/: __main__.py  checkpointer.py  inspector.py  protocol.py  stores.py  turn_runner.py
kora_v2/safety/: __init__.py  (+1 more)
scripts/: bootstrap_tooling.sh
tests/: conftest.py
(+519 files in other folders)
